components/markdown/src/snapshots/markdown__markdown__tests__multiple_refs.snap
---
source: components/markdown/src/markdown.rs
expression: html
---
<p>This text has two<sup class="footnote-reference" id="fr-1-1"><a href="https://www.getzola.org/test/#fn-1">[1]</a></sup> identical footnotes<sup class="footnote-reference" id="fr-1-2"><a href="https://www.getzola.org/test/#fn-1">[1]</a></sup></p>
<hr><ol class="footnotes-list">
<li id="fn-1">
<p>So one is present. <a href="#fr-1-1">↩</a> <a href="#fr-1-2">↩2</a></p>
</li>
</ol>
